--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ header {
   padding: 0 7%;
   border-radius: 0 0 0 4em;
   background-color: #fff;
-  background-image: url(./assets/header-shape.png);
+  background-image: url(./assets/header-mobile.png);
   background-size: 100%;
   background-position-x: center;
   background-repeat: no-repeat;
