--- a/style.css
+++ b/style.css
@@ -605,6 +605,9 @@ i {
   background-image: url(./assets/M1.png);
   background-repeat: no-repeat;
   background-position-x: right;
+  position: absolute;
+  top: 4500px;
+  left: 0;
 }
 .contact-heading {
   text-align: center;
