--- a/style.css
+++ b/style.css
@@ -663,11 +663,14 @@ textarea:focus {
 
 .contact-button {
   align-self: flex-start;
-  background: #fff;
+  background-color: #fff;
   width: 142px;
   height: 48px;
   border-radius: 8px;
-  color: #396df2;
+  color: #6070ff;
   border: none;
   margin: 20px 10px 10px 0;
+  cursor: not-allowed;
+  opacity: 0.6;
 }
+/* write your code below for hover */
