--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   font-family: "poppins", sans-serif;
 }
 
+body {
+  background-color: #f7f7f9;
+}
+
 main {
   width: 100%;
 }
@@ -598,11 +602,10 @@ i {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin: 6em 0 0 0;
-  padding: 3em;
+  padding-top: 2em;
   border-radius: 5em 0 0 0;
   background-color: #6070ff;
-  background-image: url(./assets/M1.png);
+  background-image: url(./assets/contact-bg.png);
   background-repeat: no-repeat;
   background-position-x: right;
   position: absolute;
@@ -612,12 +615,12 @@ i {
 
 .contact-heading {
   text-align: center;
-  margin-top: 0.75em;
+  margin-top: 0.90em;
   font-family: inherit;
   color: #fff;
   font-weight: 700;
   font-size: 2.5rem;
-  line-height: 52px;
+  line-height: 50px;
 }
 
 .contact-paragraph {
@@ -626,15 +629,18 @@ i {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
-  line-height: 28px;
+  font-size: 18px;
+  line-height: 33px;
   color: #ebebff;
+  width: 80%;
+  margin-left: 35px; ;
 }
 
 .contact-form {
   display: flex;
   flex-direction: column;
   margin-top: 0.75em;
+  margin-bottom: 10px;
 }
 
 .contact-form > input:focus,
@@ -646,8 +652,9 @@ textarea:focus {
 
 .contact-input {
   margin-top: 0.75em;
+  margin-left: 35px;
   padding: 0.75em;
-  width: 100%;
+  width: 80%;
   border: 1px solid #cfd8dc;
   font-family: "Poppins", sans-serif;
   font-style: normal;
@@ -657,29 +664,39 @@ textarea:focus {
   border-radius: 8px;
 }
 
-.contact-input::placeholder {
-  font-size: 10px;
-}
-
 .contact-button {
   align-self: flex-start;
-  background-color: #fff;
-  width: 142px;
-  height: 48px;
+}
+
+button {
+  font-family: inherit;
+  background: #fff;
+  color: #396df2;
+  border: 1px solid #6070ff;
   border-radius: 8px;
-  color: #6070ff;
-  border: none;
-  margin: 20px 10px 10px 0;
-  cursor: not-allowed;
-  opacity: 0.6;
-}
-
-.contact-button:hover {
-  background-color: #868fdb;
+  padding: 12px;
+  font-size: 1.05em;
+  font-weight: 500;
+  letter-spacing: 0.03em;
+  width: auto;
+  margin-left: 35px;
+  margin-top: 10px;
+  margin-bottom: 20px;
   cursor: pointer;
 }
 
-.contact-button:enabled {
-  opacity: 1;
-  cursor: pointer;
+button:hover {
+  background: #6070ff;
+  box-shadow: 0 0.5em 1em #4053fc3d;
+  color: #fff;
 }
+
+button:active {
+  background: #2230d2;
+  color: #fff;
+}
+
+button:disabled,
+button[disabled] {
+  border: 1px solid #c1c7d0;
+  color: #5e6c84;
